force-app/main/default/objects/sfFma__FeatureParameterDate__c/fields/sfFma__Value__c.field-meta.xml
<CustomField>
    <fullName>sfFma__Value__c</fullName>
    <label>Feature Parameter Value</label>
    <type>Date</type>
</CustomField>