force-app/main/default/objects/sfFma__FeatureParameterDate__c/validationRules/sfFma__FullNameUpdatePrevention.validationRule-meta.xml
<ValidationRule>
    <fullName>sfFma__FullNameUpdatePrevention</fullName>
    <active>true</active>
    <description>Full Name can only be updated by the Feature Management App.</description>
    <errorConditionFormula>AND(ISCHANGED( sfFma__FullName__c ),
 $User.Id &lt;&gt;  CreatedById )</errorConditionFormula>
    <errorDisplayField>sfFma__FullName__c</errorDisplayField>
    <errorMessage>This value is set by the installed package and cannot be changed. Click undo or cancel to continue.</errorMessage>
</ValidationRule>