force-app/main/default/objects/sfFma__FeatureParameterDate__c/validationRules/sfFma__XSS_Prevention_FullName.validationRule-meta.xml
<ValidationRule>
    <fullName>sfFma__XSS_Prevention_FullName</fullName>
    <active>true</active>
    <description>Prevent malicious code from being introduced into our text fields.</description>
    <errorConditionFormula>AND(NOT(REGEX(sfFma__FullName__c , &quot;\\w+__\\w+&quot;)),
NOT(ISBLANK( sfFma__FullName__c )))</errorConditionFormula>
    <errorDisplayField>sfFma__FullName__c</errorDisplayField>
    <errorMessage>Full Name must be in the format of &lt;namespace&gt;__&lt;developer name&gt;</errorMessage>
</ValidationRule>